[package]
name = "resource-mng"
version = "0.1.3"
authors = ["Michal Mauser <michal.mauser@zeitgeistmovement.cz>"]

[dependencies]
rand = "0.4"
lazy_static = "1.1.0"

[[bin]]
name = "resmng-en"
path = "src/main.rs"
test = false

[[bin]]
name = "resmng-cz"
path = "src/maincz.rs"
test = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false