[package]
name = "resource-mng"
version = "0.1.3"
authors = ["Michal Mauser <michal.mauser@zeitgeistmovement.cz>"]
edition = "2018"

[dependencies]
rand = "0.4"

[[bin]]
name = "resmng-en"
path = "src/main.rs"
test = false

[[bin]]
name = "resmng-cz"
path = "src/maincz.rs"
test = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false